--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,8 +1,5 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/19920513/www/blob/master/README.md?rzpsjzw#1" target="_blank">首页</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/1?binjlgz" target="_blank">动态网</a> | <a href="https://d282b678eon3c.cloudfront.net/2?uyvdwbz" target="_blank">大纪元</a> | <a href="https://dvucua6a0b85v.cloudfront.net/4?agqlbjfu" target="_blank">看中国</a> | <a href="https://dnuodzs8nln8v.cloudfront.net/pHh5q?ppormq" target="_blank">新生网</a> | <a href="https://dgk92ykceobaf.cloudfront.net/tktpt?jepgu" target="_blank">阿波罗网</a> | <a href="https://d348xnvyypk4sr.cloudfront.net/Mjpvu?jxstxlp" target="_blank">干净世界</a> | <a href="https://d1kgsi70b35buf.cloudfront.net/10?elffghnmg" target="_blank">退党服务</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/Rffqf?ttchvzwr" target="_blank">明慧广播</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/nw9Vn?fqkfkd" target="_blank">传奇时代</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/AF9AG?dzjmmz" target="_blank">新境界影视</a> | <a href="https://d1eqe8yfgc9j6n.cloudfront.net/zqMQA?brreccqy" target="_blank">文昭谈论</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/7?mtbsysnxb" target="_blank">明慧</a></p><p><a href="https://d3qwx9e7uaergm.cloudfront.net/9?iuhyv" target="_blank">大法</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/3?jyizmyqol" target="_blank">新唐人</a> | <a href="https://d23a1u4ljgwmvy.cloudfront.net/obAhT?ysawp" target="_blank">人民报</a> | <a href="https://d3ohms0ydcz20j.cloudfront.net/xXNHu?fojykie" target="_blank">放光明</a> | <a href="https://d2fq83y0z2h6n4.cloudfront.net/5?dpsljsc" target="_blank">新纪元</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/6?fpxbvx" target="_blank">希望之声</a> | <a href="https://dervszfjn9udk.cloudfront.net/11?bsyovha" target="_blank">无界网络</a> | <a href="https://d282b678eon3c.cloudfront.net/Pueji?mhqtsuva" target="_blank">追查国际</a> | <a href="https://d1u99il8548gs4.cloudfront.net/16?xldingve" target="_blank">明慧之窗</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/LdvzZ?mbkaevxpx" target="_blank">细语人生</a> | <a href="https://d2sn4gemyo21al.cloudfront.net/fBn3r?dqrafn" target="_blank">新世纪影视</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/PUWMb?wbanyisom" target="_blank">江峰时刻</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/8?swxnor" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147423.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147615-30_a4-1@1200x1200-320x200.jpg"><p align="center">媒体人罗琦被曝系染疫不治 曾任职港交所</p></a>
-<a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147423.md#1" title="媒体人罗琦被曝系染疫不治 曾任职港交所""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147615-30_a4-1@1200x1200-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147652.md#1" title="佛罗伦萨场场爆满 观众愿神韵之歌唱遍中国""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147659-2312302050101528-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147433.md#1" title="神韵乔州萨凡纳首场 名媛看到善良美好信念""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147629-2312301918461154-320x200.jpg">&nbsp;</a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/19920513/www/blob/master/README.md?mvkqa#1" target="_blank">首页</a> | <a href="https://d2bd0i85jg8bcc.cloudfront.net/1?cgmcp" target="_blank">动态网</a> | <a href="https://d1eqe8yfgc9j6n.cloudfront.net/2?fzhyhv" target="_blank">大纪元</a> | <a href="https://d3gus727acem18.cloudfront.net/4?dapgpeuiw" target="_blank">看中国</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/pHh5q?rxtyw" target="_blank">新生网</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/tktpt?lccgrwa" target="_blank">阿波罗网</a> | <a href="https://dep6yudto3kbo.cloudfront.net/Mjpvu?awmjtmw" target="_blank">干净世界</a> | <a href="https://d3qwx9e7uaergm.cloudfront.net/10?xocbpspkn" target="_blank">退党服务</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/Rffqf?gefscyy" target="_blank">明慧广播</a> | <a href="https://d27hok1oawuvj8.cloudfront.net/nw9Vn?ocrcg" target="_blank">传奇时代</a> | <a href="https://db8nk66phkh66.cloudfront.net/AF9AG?ofelu" target="_blank">新境界影视</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/zqMQA?yffppppka" target="_blank">文昭谈论</a> | <a href="https://d1vp4chj90rvdj.cloudfront.net/7?iwmlo" target="_blank">明慧</a></p><p><a href="https://d324e5bfxb7dri.cloudfront.net/9?rhwbee" target="_blank">大法</a> | <a href="https://d2torrlf4djx10.cloudfront.net/3?ceoydbzj" target="_blank">新唐人</a> | <a href="https://d3a3umoypakbtm.cloudfront.net/obAhT?zgorv" target="_blank">人民报</a> | <a href="https://d337p4rc38c0de.cloudfront.net/xXNHu?cpxgs" target="_blank">放光明</a> | <a href="https://d26llhbq1ka51o.cloudfront.net/5?hvydwgvq" target="_blank">新纪元</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/6?dyhvjm" target="_blank">希望之声</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/11?necvcrge" target="_blank">无界网络</a> | <a href="https://d1vp4chj90rvdj.cloudfront.net/Pueji?gmhwdmp" target="_blank">追查国际</a> | <a href="https://doh73o6c3dnba.cloudfront.net/16?awsbynjlu" target="_blank">明慧之窗</a> | <a href="https://d1205lb7lnyr8t.cloudfront.net/LdvzZ?ptpyfg" target="_blank">细语人生</a> | <a href="https://d5tsat6yropq6.cloudfront.net/fBn3r?uqkpsfxn" target="_blank">新世纪影视</a> | <a href="https://d2sn4gemyo21al.cloudfront.net/PUWMb?wyoxbdky" target="_blank">江峰时刻</a> | <a href="https://d3a3umoypakbtm.cloudfront.net/8?syllmdom" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147397.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147400-231230133405815-320x200.jpg"><p align="center">神韵英伯明翰爆满 演员三次谢幕 精英盛赞</p></a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147397.md#1" title="神韵英伯明翰爆满 演员三次谢幕 精英盛赞""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147400-231230133405815-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147326.md#1" title="最佳观赏跨年烟火的十城市 台北纽约上榜""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1293874408-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147372.md#1" title="【菁英论坛】抬毛压邓 “红纸运动”大风暴""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147373-99e96547a03929810d1495e8-320x200.jpg">&nbsp;</a>
@@ -10,15 +7,18 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147157.md#1" title="大陆50行业法轮功学员恭祝李大师新年好""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147172-2023-12-29-2312260856255176-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147335.md#1" title="跨年夜和新年美国各大商店营业时间一览""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/08/id14046097-shutterstock_152288732-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147296.md#1" title="中国交换生在犹他州遭绑架 大陆父母收勒索信""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/09/id14081145-police-arrest-i-e1560978518498-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147302.md#1" title="神韵全球七城同步上演 点燃激情 抚慰心灵""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147303-2312291837082124-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146202.md#1" title="卖最快和最慢的十款车 混动和电动车对比鲜明""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/01/BMWi8-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147272.md#1" title="24国签署联合声明 谴责中港限制媒体自由""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/12/id13467002-DSC_5756-02-600x400-1-320x200.jpeg">&nbsp;</a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147208.md#1" title="神韵达拉斯首场爆满 观众盛赞：满载而归""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/01/0000-1601012231101973-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146998.md#1" title="李正宽：王志安名声臭了 前途暗淡急寻出路""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147008-938cc3419cb19423b596da1699ebc0ec-320x200.jpeg">&nbsp;</a>
 <p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://19920513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147423.md#1">媒体人罗琦被曝系染疫不治 曾任职港交所</a><br>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139347.md#1">地表最先进的五款战机 F-35以四大优势居首</a><br>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147445.md#1">盘点亚洲房市2024年走势 多国需挤泡沫</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139347.md#1">地表最先进的五款战机 F-35以四大优势居首</a><br>
+:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147445.md#1">盘点亚洲房市2024年走势 多国需挤泡沫</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147422.md#1">恒大发公告 未清偿债务已达3163亿元</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147376.md#1">【新闻看点】英预言家：2024普京将死拜登出事</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147426.md#1">【翻墙必看】中共军方反习将领有哪些</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/31/n14147425.md#1">25年前同时登报串起缘分 日本情侣终成眷属</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146332.md#1">董军接任国防部长 李尚福下落仍不明</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146537.md#1">中共破格提拔董军为防长 释何信号</a><br>
@@ -99,8 +99,8 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14142930.md#1">【名家专栏】与中共相关的犯罪团伙贩卖大麻</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141498.md#1">美欧和中共清洁能源保卫战的来龙去脉</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142588.md#1">【菁英论坛】最后的收割 中共盯上200万亿民储</a><br>
-<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3snni869juclv.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://1.168.214.115/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 49,697</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2dx1zpks4xzww.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://123.204.158.44/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 49,697</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
